--- a/Demos/Notifications/Wisej.DemoBrowser.AlertBox/Features.resx
+++ b/Demos/Notifications/Wisej.DemoBrowser.AlertBox/Features.resx
@@ -125,8 +125,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAAAIAQAAkgAAAIYAAABvAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAALgEAAM4AAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAAAuAQAAggAAAKwAAABfAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAAVAEAAKkAAAAL
 </value>
   </data>
   <data name="buttonStop.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -137,8 +137,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAACwAQAAkgAAAC4BAABvAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAhgAAAM4AAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAADWAQAAggAAAFQBAABfAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAArAAAAKkAAAAL
 </value>
   </data>
   <data name="buttonQuestion.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -149,8 +149,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAAAIAQAA3QAAAIYAAAC6AAAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAALgEAAIMAAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAAAuAQAAzQAAAKwAAACqAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAAVAEAAF4AAAAL
 </value>
   </data>
   <data name="buttonNone.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -161,8 +161,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAACwAQAA3QAAAC4BAAC6AAAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAhgAAAIMAAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAADWAQAAzQAAAFQBAACqAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAArAAAAF4AAAAL
 </value>
   </data>
   <data name="buttonInformation.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -173,8 +173,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAAAIAQAAKAEAAIYAAAAFAQAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAALgEAADgAAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAAAuAQAAGAEAAKwAAAD1AAAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAAVAEAABMAAAAL
 </value>
   </data>
   <data name="buttonHand.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -185,8 +185,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAACwAQAAKAEAAC4BAAAFAQAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAhgAAADgAAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAADWAQAAGAEAAFQBAAD1AAAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAArAAAABMAAAAL
 </value>
   </data>
   <data name="buttonError.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -197,8 +197,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAACwAQAARwAAAC4BAAAkAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAhgAAABkBAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAADWAQAANwAAAFQBAAAUAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAArAAAAPQAAAAL
 </value>
   </data>
   <data name="buttonDefault.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -209,8 +209,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAACwAQAAKwEAAC4BAAAIAQAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAhgAAADUAAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAADWAQAAEAEAAFQBAADtAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAArAAAAAsAAAAL
 </value>
   </data>
   <data name="button1.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -221,8 +221,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAACwAQAA4AAAAC4BAAC9AAAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAhgAAAIAAAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAADWAQAAxQAAAFQBAACiAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAArAAAAFYAAAAL
 </value>
   </data>
   <data name="buttonAutoCloseDelay.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -233,8 +233,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAACwAQAAlQAAAC4BAAByAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAhgAAAMsAAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAADWAQAAegAAAFQBAABXAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAArAAAAKEAAAAL
 </value>
   </data>
   <data name="buttonProgressBar.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -245,8 +245,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAACwAQAASgAAAC4BAAAnAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAhgAAABYBAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAADWAQAALwAAAFQBAAAMAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAArAAAAOwAAAAL
 </value>
   </data>
   <data name="buttonClose.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -257,8 +257,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAAALAQAAKgEAAIkAAAAHAQAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAKwEAADYAAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAAAxAQAADwEAAK8AAADsAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAAUQEAAAwAAAAL
 </value>
   </data>
   <data name="buttonHtml.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -269,8 +269,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAAALAQAA3wAAAIkAAAC8AAAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAKwEAAIEAAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAAAxAQAAxAAAAK8AAAChAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAAUQEAAFcAAAAL
 </value>
   </data>
   <data name="buttonActionOnClose.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -281,8 +281,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAAALAQAAlAAAAIkAAABxAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAKwEAAMwAAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAAAxAQAAeQAAAK8AAABWAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAAUQEAAKIAAAAL
 </value>
   </data>
   <data name="panel2.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -290,10 +290,13 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
         dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
         YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
-        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQQAAAAETmFtZQ9TaG93
-        Q2xvc2VCdXR0b24EVGV4dARTaXplAQABBAETU3lzdGVtLkRyYXdpbmcuU2l6ZQMAAAACAAAABgQAAAAF
-        UGhvbmUABgUAAAAQQWxlcnRCb3ggT3B0aW9ucwX6////E1N5c3RlbS5EcmF3aW5nLlNpemUCAAAABXdp
-        ZHRoBmhlaWdodAAACAgDAAAAOAIAAH4BAAAL
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQUAAAAETmFtZQ9TaG93
+        Q2xvc2VCdXR0b24EVGV4dARTaXplCUZsb3dCcmVhawEAAQQEARNTeXN0ZW0uRHJhd2luZy5TaXplAwAA
+        ADJXaXNlai5CYXNlLlJlc3BvbnNpdmVQcm9maWxlK0V4dGVuZGVkUHJvcGVydHlWYWx1ZQIAAAACAAAA
+        BgQAAAAFUGhvbmUABgUAAAAQQWxlcnRCb3ggT3B0aW9ucwX6////E1N5c3RlbS5EcmF3aW5nLlNpemUC
+        AAAABXdpZHRoBmhlaWdodAAACAgDAAAAhAIAADkBAAAJBwAAAAUHAAAAMldpc2VqLkJhc2UuUmVzcG9u
+        c2l2ZVByb2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZhbHVlAgAAAAVWYWx1ZQhQcm92aWRlcgIBAgAAAAgB
+        AQYIAAAAEGZsb3dMYXlvdXRQYW5lbDEL
 </value>
   </data>
   <data name="flowLayoutPanel1.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -308,15 +311,14 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
         dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
         YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
-        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQYAAAAETmFtZQ1GbG93
-        RGlyZWN0aW9uAyRBZAhMb2NhdGlvbgRTaXplBkFuY2hvcgEEBAQEBBdXaXNlai5XZWIuRmxvd0RpcmVj
-        dGlvbgIAAAAYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2ludAMA
-        AAATU3lzdGVtLkRyYXdpbmcuU2l6ZQMAAAAWV2lzZWouV2ViLkFuY2hvclN0eWxlcwIAAAACAAAABgQA
-        AAAFUGhvbmUF+////xdXaXNlai5XZWIuRmxvd0RpcmVjdGlvbgEAAAAHdmFsdWVfXwAIAgAAAAEAAAAF
-        +v///xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3aWR0aAZoZWlnaHQAAAAACAgICAMA
-        AABlAgAAHQMAACcAAAAVAAAABfn///8UU3lzdGVtLkRyYXdpbmcuUG9pbnQCAAAAAXgBeQAACAgDAAAA
-        JQAAAAwAAAAF+P///xNTeXN0ZW0uRHJhd2luZy5TaXplAgAAAAV3aWR0aAZoZWlnaHQAAAgIAwAAAD4C
-        AAAIAwAABff///8WV2lzZWouV2ViLkFuY2hvclN0eWxlcwEAAAAHdmFsdWVfXwAIAgAAAA8AAAAL
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQYAAAAETmFtZQREb2Nr
+        EEF1dG9TY3JvbGxNYXJnaW4ITG9jYXRpb24EU2l6ZQZBbmNob3IBBAQEBAQTV2lzZWouV2ViLkRvY2tT
+        dHlsZQIAAAATU3lzdGVtLkRyYXdpbmcuU2l6ZQMAAAAUU3lzdGVtLkRyYXdpbmcuUG9pbnQDAAAAE1N5
+        c3RlbS5EcmF3aW5nLlNpemUDAAAAFldpc2VqLldlYi5BbmNob3JTdHlsZXMCAAAAAgAAAAYEAAAABVBo
+        b25lBfv///8TV2lzZWouV2ViLkRvY2tTdHlsZQEAAAAHdmFsdWVfXwAIAgAAAAUAAAAF+v///xNTeXN0
+        ZW0uRHJhd2luZy5TaXplAgAAAAV3aWR0aAZoZWlnaHQAAAgIAwAAAAAAAAAUAAAABfn///8UU3lzdGVt
+        LkRyYXdpbmcuUG9pbnQCAAAAAXgBeQAACAgDAAAAAAAAAAAAAAAB+P////r///+KAgAAKQMAAAX3////
+        Fldpc2VqLldlYi5BbmNob3JTdHlsZXMBAAAAB3ZhbHVlX18ACAIAAAAPAAAACw==
 </value>
   </data>
   <data name="panel1.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -324,11 +326,14 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
         dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
         YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
-        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQRTaXpl
-        CExvY2F0aW9uAQQEE1N5c3RlbS5EcmF3aW5nLlNpemUDAAAAFFN5c3RlbS5EcmF3aW5nLlBvaW50AwAA
-        AAIAAAAGBAAAAAVQaG9uZQX7////E1N5c3RlbS5EcmF3aW5nLlNpemUCAAAABXdpZHRoBmhlaWdodAAA
-        CAgDAAAAOAIAAH4BAAAF+v///xRTeXN0ZW0uRHJhd2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAADAAAA
-        hwEAAAs=
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQQAAAAETmFtZQRTaXpl
+        CExvY2F0aW9uCUZsb3dCcmVhawEEBAQTU3lzdGVtLkRyYXdpbmcuU2l6ZQMAAAAUU3lzdGVtLkRyYXdp
+        bmcuUG9pbnQDAAAAMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVByb2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZh
+        bHVlAgAAAAIAAAAGBAAAAAVQaG9uZQX7////E1N5c3RlbS5EcmF3aW5nLlNpemUCAAAABXdpZHRoBmhl
+        aWdodAAACAgDAAAAhAIAAEkBAAAF+v///xRTeXN0ZW0uRHJhd2luZy5Qb2ludAIAAAABeAF5AAAICAMA
+        AAADAAAAQgEAAAkHAAAABQcAAAAyV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZStFeHRlbmRlZFBy
+        b3BlcnR5VmFsdWUCAAAABVZhbHVlCFByb3ZpZGVyAgECAAAACAEBBggAAAAQZmxvd0xheW91dFBhbmVs
+        MQs=
 </value>
   </data>
   <metadata name="$this.RulerSnapLines" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -338,16 +343,4 @@
         U3lzdGVtLkRyYXdpbmcuUG9pbnQCAAAACw==
 </value>
   </metadata>
-  <data name="$this.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
-        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
-        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
-        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQRTaXpl
-        CExvY2F0aW9uAQQEE1N5c3RlbS5EcmF3aW5nLlNpemUDAAAAFFN5c3RlbS5EcmF3aW5nLlBvaW50AwAA
-        AAIAAAAGBAAAAAVQaG9uZQX7////E1N5c3RlbS5EcmF3aW5nLlNpemUCAAAABXdpZHRoBmhlaWdodAAA
-        CAgDAAAAigIAACkDAAAF+v///xRTeXN0ZW0uRHJhd2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAAZAAAA
-        GQAAAAs=
-</value>
-  </data>
 </root>
